crates/toml_edit/tests/fixtures/invalid/integer-invalid-binary-char.stderr
TOML parse error at line 1, column 11
  |
1 | bad = 0b102
  |           ^
Unexpected `2`
Expected `#`
